--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
         <p></p>
     </main>
  <script src="java.js"></script>
+ <script src="java2.js"></script>
+ <script src="java3.js"></script>
+ <script src="java4.js"></script>
 </body>
 </html>
